--- a/pom.xml
+++ b/pom.xml
@@ -61,10 +61,11 @@
             </configuration>
         </plugin>
 	<plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>2.19</version>
-        </plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-war-plugin</artifactId>
+    <version>3.3.2</version> 
+</plugin>
+
     </plugins>
 </build>
 	
